style(dropdown.module.css): fix spacings

--- a/apps/web/src/components/dropdown/dropdown.module.css
+++ b/apps/web/src/components/dropdown/dropdown.module.css
@@ -3,22 +3,22 @@
 }
 
 .options {
-    display:none;
+    display: none;
     position: absolute;
     width: 100%;
     background-color: white;
     list-style-type: none;
     z-index: 2;
     margin: 0;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 
 .dropdown:hover .options {
-    display:block;
+    display: block;
 }
 
 .option {
-    cursor:pointer;
+    cursor: pointer;
     padding: 0.5rem 1rem;
     color: #000;
 }
@@ -42,7 +42,7 @@
     justify-content: space-between;
     box-sizing: border-box;
     width: 100%;
-    padding: 0.375rem 0.25rem;
+    padding: 0.5rem 1rem;
     margin-top: 0.25rem;
     border-bottom: 1px solid #454545;
     background-color: #fff;
